2016-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c (WriteSUNImage): Fix SourceForge bug #343
	"out-of-bounds write in coders/sun.c:962".

	* coders/rle.c (ReadRLEImage): Fix SourceForge bug #344
	"out-of-bounds write in coders/rle.c:524".

	* coders/xpm.c (ReadXPMImage): Fix SourceForge bug #335
	"out-of-bounds read in coders/xpm.c:154 ".

2016-03-06  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* doc/options.imdoc (-extent): Revised the example to
	clarify the interaction of -gravity with the "geometry" offsets.

2016-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add support for --enable-broken-coders which
	determines if broken or hazardous file format support should be
	enabled in the build.  Currently Adobe Photoshop (PSD) format is
	included in this category.

	* Rotate Changelog for new year.  Update documentation copyrights
	for new year.

2016-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff/libtiff/tif_config.h (HAVE_SNPRINTF): Define HAVE_SNPRINTF
	when using Microsoft Visual C++ 14 (Visual Studio 2015) or later.
	This is based on advice by Pablo Elpuro.

2016-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (xResolution): New method to support
	setting the horizontal resolution with double precision.
	(yResolution): New method to support setting the vertical
	resolution with double precision.

	* www/Hg.rst: Document the ssh public keys for the server hosting
	the development Mercurial repository.

2016-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Fix SourceForge bug #333
	heap-buffer-overflow in coders/xpm.c:409.
